<resources>
    <string name="app_name">LUDIANSeller</string>
    <string name="login">Login</string>
    <string name="enter_your_email_password">Enter your email and password</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="fogot_your_password">Forgot your password?</string>
    <string name="signup">Sign Up</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="let_started_create_account">Let\'s get started by creating your account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="i_agree">I agree to the medidoc Terms of Service and Privacy Policy</string>
    <string name="fullname">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="password_reset">Password Reset</string>
    <string name="please_put_your_mobile_number">Please put your mobile number to reset your password</string>
    <string name="sms">SMS</string>
    <string name="email">Email</string>
    <string name="check_your_mail">Check your mail or check your cell phone</string>
    <string name="please_enter_four_digit_number">Please put the 4 digits sent to you</string>
    <string name="create_new_password">Create New Password</string>
    <string name="your_new_password_must_be">Your new password must be different from previous used passwords.</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="booking">Booking</string>
    <string name="bookmark">Bookmark</string>
    <string name="explore">Explore</string>
    <string name="personal_info">Personal Info</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="faq">FAQ</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="general_notification">General Notification</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="app_updates">App Updates</string>
    <string name="new_tips_available">New Tips Available</string>
    <string name="notification">Notification</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="search">Search...</string>
    <string name="recent_searches">Recent searches</string>
    <string name="most_popular_home">Most Popular Home</string>
    <string name="welcome">Welcome</string>
    <string name="trending_destinations">Trending destinations</string>
    <string name="nearby">Nearby</string>
    <string name="clear">Clear</string>
    <string name="completed">Completed</string>
    <string name="upcoming">Upcoming</string>
    <string name="previous">Previous</string>
    <string name="filter">Filter</string>
    <string name="rating">Rating</string>
    <string name="location">Location</string>
    <string name="property_type">Property Type</string>
    <string name="all">All</string>
    <string name="motels">Motels</string>
    <string name="resort">Resort</string>
    <string name="guest_house">Guest House</string>
    <string name="hotels">Hotels</string>
    <string name="room_type">Room Type</string>
    <string name="single">Single</string>
    <string name="family_stay">Family Stay</string>
    <string name="superior">Superior</string>
    <string name="doubles">Double</string>
    <string name="budget_range">Budget Range</string>
    <string name="date">Date</string>
    <string name="apply">Apply</string>
    <string name="guests">Guests</string>
    <string name="go_to_home">Go to Home</string>
    <string name="booking_successfully">Booking Successfully</string>
    <string name="booking_successfully_text">Thank you for using App we wish you a Happy and comfortable Holiday with Family and Relatives.</string>
    <string name="wifi">Free Wifi</string>
    <string name="free_breakfast">Free Breakfast</string>
    <string name="description">Description</string>
    <string name="preview">Preview</string>
    <string name="reasons_to_book">Reasons to book</string>
    <string name="overview">Overview</string>
    <string name="review">Review</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="book">Book</string>
    <string name="chats">Chats</string>
    <string name="full_name">Full Name</string>
    <string name="edit">Edit</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="messages">Messages</string>
    <string name="your_message">Your message</string>
    <string name="add_property">Add Property</string>
    <string name="photos">Photos</string>
    <string name="title">Title</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="house">House</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="post_add">Post Add</string>
    <string name="txt_error_message">%s</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="please_enter_last_name">PLease enter last name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_check_terms_condition">Please accept terms and conditions</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="please_wait">Please wait...</string>
    <string name="empty">Empty</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="password_dont_matched">Password don\'t matched</string>
    <string name="permission_denied">Permission denied</string>
    <string name="address">Address</string>
    <string name="service_provide">Service Provide</string>
    <string name="please_add_atleast_one_image">Please add atleast one image</string>
    <string name="please_add_title">Please add title</string>
    <string name="please_add_address">Please add address</string>
    <string name="please_add_description">PLease add description</string>
    <string name="please_enter_bedroom_number">"Please enter bedroom "</string>
    <string name="please_enter_guest_number">Please enter guest number</string>
    <string name="please_enter_house">Please enter house</string>
    <string name="please_enter_bathroom">Please enter bathroom</string>
    <string name="please_enter_size">Please enter size</string>
    <string name="please_enter_price">Please enter price</string>
    <string name="calendar">Calendar</string>
    <string name="forbidden">Forbidden</string>
    <string name="night_availability">Night availability</string>
    <string name="add_a_note">Add a note</string>
    <string name="latest_reservation">Latest reservations</string>
    <string name="next_guest">Next guests</string>
    <string name="complete">Complete</string>
    <string name="in_progres">In Progress</string>
    <string name="cancelled">Cancelled</string>
    <string name="create_a_new_listing">Create a new listing</string>
    <string name="create_from_an_exting_listing">Create from an exiting listing</string>
    <string name="it_is_easy_to_start">It\'s easy to get started on Ludian</string>
    <string name="tell_us_about_your_friend">Tell us about your place</string>
    <string name="share_some_basic_info">Share some basic info, such as where it is and how many guests can stay.</string>
    <string name="make_it_stand_out">Make it stand out</string>
    <string name="add_more_then_five_photos">Add 5 or more photos plus a title and description - we\'ll help you out.</string>
    <string name="choose_like_id">Choose if you\'d like to start with an experienced guest, set a starting price and publish your listing.</string>
    <string name="finish_up">Finish up and publish</string>
    <string name="get_started">Get started</string>
    <string name="describe_your_place">Which of these best describes your place?</string>
    <string name="next">Next</string>
    <string name="what_type_place_will_guest">What type of place will guests have?</string>
    <string name="an_entire_place">An entire place</string>
    <string name="guest_have_whole_place">Guests have the whole place to themselves.</string>
    <string name="a_room">A room</string>
    <string name="guest_have_their_own_room">Guests have their own room in a home, plus access to shared spaces.</string>
    <string name="shared_room">A shared room</string>
    <string name="share_room_text">Guests sleep in a room or common area that may be shared with you or others.</string>
    <string name="where_your_place_located">Where\'s your place located?</string>
    <string name="your_address_only_share_guest">Your address is only shared with guests after they\'ve made a reservation.</string>
    <string name="lets_started_basic">Let\'s start with the basics</string>
    <string name="add_more_details">You\'ll add more details later, such as bed types.</string>
    <string name="beds">Beds</string>
    <string name="how_many_guest_fit">How many guests fit comfortably in your place?</string>
    <string name="tell_guest_what_place">Tell guests what your place has to offer</string>
    <string name="you_can_add_more">You can add more amenities after you publish your listing</string>
    <string name="what_about_guest_fav">What about these guest favourites?</string>
    <string name="wifi_new">Wifi</string>
    <string name="do_you_have_amenity">Do you have any standout amenities?</string>
    <string name="pool">Pool</string>
    <string name="add_some_photos">Add some photos of your flat/ apartment</string>
    <string name="you_will_need_to_add">You\'ll need 5 photos to get started. You can add more or make changes later</string>
    <string name="add_photos">Add photos</string>
    <string name="take_new_photos">Take new photos</string>
    <string name="lets_give_title">Now, let\'s give your flat/ apartment a title</string>
    <string name="short_title">Short titles work best. Have fun with it - you can always change it later.</string>
    <string name="hint_text">You\'ll have a great time at this comfortable place to stay.</string>
    <string name="create_your_description">Create your description</string>
    <string name="share_what_make_your_place">Share what makes your place special.</string>
    <string name="decide_have_you_will">Decide how you\'ll confirm reservations</string>
    <string name="use_instant_book">Use Instant Book</string>
    <string name="guest_can_book_automatically">Guests can book automatically.</string>
    <string name="your_placed">Help your place stand out to get booked faster and earn your first reviews.</string>
    <string name="only_one_discount">Only one discount will be applied per stay. Learn</string>
    <string name="charecter_available">32 characters available</string>
    <string name="add_discount_count">Add Discount coupon</string>
    <string name="discount_percent">Discount Percent</string>
    <string name="activation_date">Activation Date</string>
    <string name="expiry_date">Expiry Date</string>
</resources>