<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">



        <RelativeLayout
            android:id="@+id/rlHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            >


            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_brown_back"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"/>







        </RelativeLayout>

        <LinearLayout
            android:id="@+id/rlMain"
            android:layout_below="@+id/rlHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp"
            android:visibility="visible" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_discount_count"
                android:fontFamily="@font/poppins_bold"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_placed"
                android:fontFamily="@font/poppins_regular"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/color_gray_light1"
                />


            <EditText
                android:id="@+id/edTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/title"
                android:padding="@dimen/_10sdp"
                android:layout_gravity="center_vertical|top"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textColorHint="@color/black"
                android:background="@drawable/rounded_corner_stroke_10"/>

            <TextView
                android:id="@+id/tvDiscountPercent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/discount_percent"
                android:padding="@dimen/_10sdp"
                android:layout_gravity="center_vertical|top"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textColorHint="@color/color_gray_light1"
                android:background="@drawable/rounded_corner_stroke_10"/>

            <TextView
                android:id="@+id/tvActivationDate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/activation_date"
                android:padding="@dimen/_10sdp"
                android:layout_gravity="center_vertical|top"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textColorHint="@color/color_gray_light1"
                android:background="@drawable/rounded_corner_stroke_10"/>

            <TextView
                android:id="@+id/tvExpiryDate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/expiry_date"
                android:padding="@dimen/_10sdp"
                android:layout_gravity="center_vertical|top"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textColorHint="@color/color_gray_light1"
                android:background="@drawable/rounded_corner_stroke_10"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDiscount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_discount"
                android:visibility="gone"
                />





            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_brown_btn_bg"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_10sdp"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_alignParentBottom="true"
                android:visibility="visible"
                />




        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/only_one_discount"
            android:fontFamily="@font/poppins_regular"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/color_gray_light1"
            android:layout_margin="@dimen/_15sdp"
            android:visibility="gone"
            />








    </RelativeLayout>











</layout>
