<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">



        <RelativeLayout
            android:id="@+id/rlHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            >


            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_brown_back"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_property"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/_18sdp"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                />
















        </RelativeLayout>

        <LinearLayout
            android:layout_below="@+id/rlHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/it_is_easy_to_start"
                android:fontFamily="@font/poppins_bold"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/black"
                />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_toStartOf="@+id/ivOne"
                    android:layout_marginEnd="@dimen/_15sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tell_us_about_your_friend"
                        android:fontFamily="@font/poppins_bold"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share_some_basic_info"
                        android:fontFamily="@font/poppins_regular"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:textColor="@color/color_gray_light1"
                        />



                </LinearLayout>


                <ImageView
                    android:id="@+id/ivOne"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_bed" />


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_gray_line"
                android:layout_marginTop="@dimen/_15sdp"/>







            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_toStartOf="@+id/ivTwo"
                    android:layout_marginEnd="@dimen/_15sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/make_it_stand_out"
                        android:fontFamily="@font/poppins_bold"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_more_then_five_photos"
                        android:fontFamily="@font/poppins_regular"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:textColor="@color/color_gray_light1"
                        />



                </LinearLayout>


                <ImageView
                    android:id="@+id/ivTwo"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_more_photod" />


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_gray_line"
                android:layout_marginTop="@dimen/_15sdp"/>




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_toStartOf="@+id/ivThree"
                    android:layout_marginEnd="@dimen/_15sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/finish_up"
                        android:fontFamily="@font/poppins_bold"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_like_id"
                        android:fontFamily="@font/poppins_regular"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:textColor="@color/color_gray_light1"
                        />



                </LinearLayout>


                <ImageView
                    android:id="@+id/ivThree"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_finishup" />


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_gray_line"
                android:layout_marginTop="@dimen/_15sdp"/>




        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/rounded_brown_btn_bg"
            android:fontFamily="@font/poppins_regular"
            android:padding="@dimen/_10sdp"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />


    </RelativeLayout>

</layout>
